--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -117,6 +117,7 @@
                     android:background="@drawable/edit_text_design"
                     android:completionThreshold="1"
                     android:fontFamily="@font/amarante"
+                    android:imeOptions="actionDone"
                     android:inputType="textNoSuggestions|textCapWords"
                     android:maxLines="1"
                     android:paddingStart="15dp"
@@ -154,7 +155,7 @@
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/amarante"
                     android:hint="@string/start_date"
@@ -164,15 +165,15 @@
                         android:id="@+id/startDate_Et"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
                         android:background="@drawable/edit_text_design"
                         android:focusable="false"
                         android:fontFamily="@font/amarante"
                         android:inputType="text"
                         android:maxLines="1"
                         android:paddingStart="15dp"
+                        android:paddingTop="8dp"
                         android:paddingEnd="15dp"
+                        android:paddingBottom="8dp"
                         android:textColor="#000"
                         android:textSize="21sp" />
 
@@ -190,7 +191,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginEnd="20dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/amarante"
@@ -201,15 +202,15 @@
                         android:id="@+id/endDate_Et"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
                         android:background="@drawable/edit_text_design"
                         android:focusable="false"
                         android:fontFamily="@font/amarante"
                         android:inputType="text"
                         android:maxLines="1"
                         android:paddingStart="15dp"
+                        android:paddingTop="8dp"
                         android:paddingEnd="15dp"
+                        android:paddingBottom="8dp"
                         android:textColor="#000"
                         android:textSize="21sp" />
 
@@ -238,14 +239,15 @@
                         android:id="@+id/groupName_ET"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
                         android:background="@drawable/edit_text_design"
                         android:fontFamily="@font/amarante"
+                        android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:paddingStart="15dp"
+                        android:paddingTop="8dp"
                         android:paddingEnd="15dp"
+                        android:paddingBottom="8dp"
                         android:textColor="@color/colorBlack"
                         android:textSize="21sp" />
 
@@ -272,14 +274,14 @@
                             android:id="@+id/eventCost_ET"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:paddingTop="8dp"
-                            android:paddingBottom="8dp"
                             android:background="@drawable/edit_text_design"
                             android:fontFamily="@font/amarante"
-                            android:inputType="text"
+                            android:inputType="number"
                             android:maxLines="1"
                             android:paddingStart="15dp"
+                            android:paddingTop="8dp"
                             android:paddingEnd="15dp"
+                            android:paddingBottom="8dp"
                             android:textColor="@color/colorBlack"
                             android:textSize="21sp" />
 
