--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -536,14 +536,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/relative7"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="50dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:background="@android:color/holo_red_light"
-            android:text="Join"
+            android:text="@string/join_event"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textAllCaps="false"
             android:visibility="gone" />
 
         <Button
@@ -552,11 +554,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/relative7"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
+            android:textAllCaps="false"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="50dp"
             android:background="@android:color/holo_red_light"
-            android:text="Cancel"
+            android:text="@string/leave_event"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
