--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,7 @@
         <item>@font/aladin</item>
         <item>@font/almendra_sc</item>
         <item>@font/amarante</item>
+        <item>@font/amiko</item>
         <item>@font/bilbo_swash_caps</item>
         <item>@font/bree_serif</item>
         <item>@font/bungee_hairline</item>
