--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -531,56 +531,56 @@
                 android:textSize="18sp" />
         </RelativeLayout>
 
-        <Button
-            android:id="@+id/joinBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relative7"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="50dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:background="@android:color/holo_red_light"
-            android:text="@string/join_event"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textAllCaps="false"
-            android:visibility="gone" />
 
-        <Button
-            android:id="@+id/cancel_joinBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relative7"
-            android:layout_centerHorizontal="true"
-            android:textAllCaps="false"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="50dp"
-            android:background="@android:color/holo_red_light"
-            android:text="@string/leave_event"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:visibility="gone" />
+        <RelativeLayout
+            android:id="@+id/relative15"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_below="@id/relative7"
+            android:layout_marginBottom="50dp">
 
-        <TextView
-            android:id="@+id/txt7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relative7"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="50dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:text="you are admin of this event"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:visibility="gone" />
+            <Button
+                android:id="@+id/joinBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:background="@android:color/holo_red_light"
+                android:text="@string/join_event"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAllCaps="false"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/cancel_joinBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textAllCaps="false"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:background="@android:color/holo_red_light"
+                android:text="@string/leave_event"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/txt7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="you are admin of this event"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:visibility="gone" />
+        </RelativeLayout>
     </RelativeLayout>
 
 
