my event and all event from popup menu work done and also optimize event recyclerview

--- a/app/src/main/res/drawable/custom_round.xml
+++ b/app/src/main/res/drawable/custom_round.xml
@@ -7,7 +7,7 @@
         android:width="35dp"
         android:height="35dp"/>
     <solid
-        android:color="#CCCACA"/>
+        android:color="@color/transparent"/>
     <corners
         android:radius="150dp"/>
     <stroke
