--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -48,11 +48,12 @@
 
                     <EditText
                         android:id="@+id/event_searchET"
-                        android:layout_width="260dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@null"
                         android:cursorVisible="false"
                         android:gravity="center_vertical"
+                        android:layout_toStartOf="@+id/searchIV"
                         android:layout_toEndOf="@+id/event_nav_icon"
                         android:hint="Search Events"
                         android:paddingStart="15dp"
@@ -65,7 +66,7 @@
                         android:id="@+id/searchIV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@+id/event_searchET"
+                        android:layout_toStartOf="@+id/moreTV"
                         android:background="@drawable/custom_round"
                         android:layout_centerVertical="true"
                         android:layout_marginStart="5dp"
@@ -76,7 +77,6 @@
                         android:id="@+id/moreTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@+id/searchIV"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
                         android:drawableStart="@drawable/ic_more_black_24dp"
