--- a/app/src/main/res/drawable/custom_round2.xml
+++ b/app/src/main/res/drawable/custom_round2.xml
@@ -7,7 +7,7 @@
         android:width="60dp"
         android:height="60dp"/>
     <solid
-        android:color="@color/colorYellow"/>
+        android:color="@color/orange"/>
     <corners
         android:radius="30dp"/>
     <stroke
