--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -50,17 +50,17 @@
                         android:id="@+id/event_searchET"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_toStartOf="@+id/searchIV"
+                        android:layout_toEndOf="@+id/event_nav_icon"
                         android:background="@null"
                         android:cursorVisible="false"
                         android:gravity="center_vertical"
-                        android:layout_toStartOf="@+id/searchIV"
-                        android:layout_toEndOf="@+id/event_nav_icon"
-                        android:hint="Search Events"
+                        android:hint="District or Group Name"
                         android:paddingStart="15dp"
                         android:paddingEnd="15dp"
                         android:textColor="@android:color/black"
                         android:textColorHint="@android:color/darker_gray"
-                        android:textSize="21sp" />
+                        android:textSize="17sp" />
 
                     <ImageView
                         android:id="@+id/searchIV"
