new animation file create

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,6 @@
     <color name="accent">#FF4081</color>
     <color name="darkPopUp">#2f333f</color>
 
+    <color name="ashes">#CCCACA</color>
+
 </resources>
